--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
   width: 100%;
   max-width: 1000px;
   max-height: 2500px;
-  background: #fff;
+  background: #ffffff;
   margin: 50px;
   display: grid;
   grid-template-columns: 1fr 2fr;
@@ -28,11 +28,12 @@ body {
 
 .contrainer .left_side {
   position: relative;
-  background: #003147;
+  /* background: #003147; */
   padding: 40px;
 }
 .contrainer .right_side {
   position: relative;
   background: #003147;
+  color: #fff;
   padding: 40px;
 }
